# data-science-workshop

./: .env.example  langgraph.json  pyproject.toml
notebooks/: dashboarding.ipynb  email_agent.ipynb  eval_driven_dev.ipynb
utils/: agent.py  datasets.py  evaluators.py  models.py  prompts.py  setup_langsmith.py  tools.py  traces.py  utils.py
