[project]
name = "data-science-workshop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "langgraph-cli>=0.4.18",
    "langsmith",
    "pandas",
    "pydantic",
    "python-dotenv",
    "requests",
    "sqlalchemy",
]
